lre-qa/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-26T02:42:52Z"
    labels:
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      name: amq-broker-operator
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: amq-broker-operator
    namespace: lre-qa
    resourceVersion: "476624870"
    uid: 6fc2ccae-1b13-42a7-b953-d444eb039991
  subsets:
  - addresses:
    - ip: 10.130.20.99
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: amq-broker-operator-78cbb94f44-fp6q2
        namespace: lre-qa
        resourceVersion: "476624867"
        uid: ce3c6161-ce24-4ac5-8131-b1f7dbe51cfe
    ports:
    - name: metrics
      port: 8383
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-26T02:42:52Z"
    labels:
      app: front-lre
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: front-lre
    namespace: lre-qa
    resourceVersion: "476624900"
    uid: e8f90cdd-8241-4275-8eb1-5eea206e8cf9
  subsets:
  - addresses:
    - ip: 10.130.20.102
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: front-lre-1-2fhch
        namespace: lre-qa
        resourceVersion: "476624898"
        uid: ed0a00dd-384e-4873-9b9b-841593f0a7c2
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-05-02T14:23:51Z"
    creationTimestamp: "2023-05-26T02:42:52Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-amqp-0-svc
    namespace: lre-qa
    resourceVersion: "306079186"
    uid: 1651ac58-2812-4e49-ba4d-77324f01cd72
  subsets:
  - addresses:
    - ip: 10.128.22.5
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: lre-broker-ss-0
        namespace: lre-qa
        resourceVersion: "306079178"
        uid: a29ea7f8-d45c-4324-8558-33ef69962cb2
    ports:
    - name: amqp-0
      port: 5672
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2023-05-26T02:44:58Z"
    creationTimestamp: "2023-05-26T02:42:52Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-amqp-1-svc
    namespace: lre-qa
    resourceVersion: "11897702"
    uid: fbe9ee83-9c5b-4f9d-be57-a6d606cdcb80
  subsets:
  - addresses:
    - ip: 10.130.16.94
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: lre-broker-ss-1
        namespace: lre-qa
        resourceVersion: "11897695"
        uid: d2bb86b5-229d-432d-b9f0-23e48da3ff61
    ports:
    - name: amqp-1
      port: 5672
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-05-02T14:23:51Z"
    creationTimestamp: "2023-05-26T02:42:52Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-hdls-svc
    namespace: lre-qa
    resourceVersion: "306079185"
    uid: c78729ec-2096-4250-8a08-0eb26afa1182
  subsets:
  - addresses:
    - hostname: lre-broker-ss-0
      ip: 10.128.22.5
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: lre-broker-ss-0
        namespace: lre-qa
        resourceVersion: "306079178"
        uid: a29ea7f8-d45c-4324-8558-33ef69962cb2
    - hostname: lre-broker-ss-1
      ip: 10.130.16.94
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: lre-broker-ss-1
        namespace: lre-qa
        resourceVersion: "302219399"
        uid: d2bb86b5-229d-432d-b9f0-23e48da3ff61
    ports:
    - name: all
      port: 61616
      protocol: TCP
    - name: console-jolokia
      port: 8161
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-05-02T14:23:51Z"
    creationTimestamp: "2023-05-26T02:42:52Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-ping-svc
    namespace: lre-qa
    resourceVersion: "306079182"
    uid: 97df4a88-a769-4674-9ea7-5ebfe8e5bfa8
  subsets:
  - addresses:
    - ip: 10.128.22.5
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: lre-broker-ss-0
        namespace: lre-qa
        resourceVersion: "306079178"
        uid: a29ea7f8-d45c-4324-8558-33ef69962cb2
    - ip: 10.130.16.94
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: lre-broker-ss-1
        namespace: lre-qa
        resourceVersion: "302219399"
        uid: d2bb86b5-229d-432d-b9f0-23e48da3ff61
    ports:
    - port: 8888
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-05-02T14:23:51Z"
    creationTimestamp: "2023-05-26T02:42:52Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-wconsj-0-svc
    namespace: lre-qa
    resourceVersion: "306079181"
    uid: 2bfbbf93-2b96-49ea-b39b-685a9ea04ec0
  subsets:
  - addresses:
    - ip: 10.128.22.5
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
      targetRef:
        kind: Pod
        name: lre-broker-ss-0
        namespace: lre-qa
        resourceVersion: "306079178"
        uid: a29ea7f8-d45c-4324-8558-33ef69962cb2
    ports:
    - name: wconsj-0
      port: 8161
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2023-05-26T02:44:58Z"
    creationTimestamp: "2023-05-26T02:42:52Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-wconsj-1-svc
    namespace: lre-qa
    resourceVersion: "11897701"
    uid: 5bbe6cb2-cc6f-4cd2-9c81-7d6ada9757bc
  subsets:
  - addresses:
    - ip: 10.130.16.94
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: lre-broker-ss-1
        namespace: lre-qa
        resourceVersion: "11897695"
        uid: d2bb86b5-229d-432d-b9f0-23e48da3ff61
    ports:
    - name: wconsj-1
      port: 8161
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-26T02:42:52Z"
    labels:
      app: product-lre
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: product-lre
    namespace: lre-qa
    resourceVersion: "467404215"
    uid: 283941e8-51d0-481b-94b9-d323b80445d5
  subsets:
  - addresses:
    - ip: 10.130.17.123
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: product-lre-3-tpqg8
        namespace: lre-qa
        resourceVersion: "467404210"
        uid: 336c5830-2c84-4423-ab58-4f0fcb6e23dd
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
