lre-qa/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.20.99
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: amq-broker-operator-78cbb94f44-fp6q2
      namespace: lre-qa
      resourceVersion: "476624867"
      uid: ce3c6161-ce24-4ac5-8131-b1f7dbe51cfe
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-26T02:42:54Z"
    generateName: amq-broker-operator-
    generation: 28
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: amq-broker-operator
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      name: amq-broker-operator
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: amq-broker-operator-6pvwj
    namespace: lre-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: amq-broker-operator
      uid: 7a2f8177-476f-4f48-b2d9-0f24509855a0
    resourceVersion: "476624871"
    uid: 778d6aa8-aa9d-4c51-b2ca-65b5090f8959
  ports:
  - name: metrics
    port: 8383
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.20.102
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: front-lre-1-2fhch
      namespace: lre-qa
      resourceVersion: "476624898"
      uid: ed0a00dd-384e-4873-9b9b-841593f0a7c2
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-26T02:42:54Z"
    generateName: front-lre-
    generation: 42
    labels:
      app: front-lre
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: front-lre
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: front-lre-hp4sn
    namespace: lre-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: front-lre
      uid: 8f453136-fe50-45ef-bbcb-1a2359e6e099
    resourceVersion: "476624899"
    uid: 07cb736a-f950-4425-8c26-685c6d265592
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.22.5
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: lre-broker-ss-0
      namespace: lre-qa
      resourceVersion: "476624630"
      uid: a29ea7f8-d45c-4324-8558-33ef69962cb2
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-26T02:42:54Z"
    generateName: lre-broker-amqp-0-svc-
    generation: 32
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-amqp-0-svc
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-amqp-0-svc-dkcfh
    namespace: lre-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-amqp-0-svc
      uid: 03034bbe-b74c-4829-9a2e-0fe8f9c2eaa3
    resourceVersion: "476624634"
    uid: ac5b53e6-1bf3-43cd-b18b-82a5dee05b96
  ports:
  - name: amqp-0
    port: 5672
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.16.94
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: lre-broker-ss-1
      namespace: lre-qa
      resourceVersion: "467404262"
      uid: d2bb86b5-229d-432d-b9f0-23e48da3ff61
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-26T02:42:54Z"
    generateName: lre-broker-amqp-1-svc-
    generation: 49
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-amqp-1-svc
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-amqp-1-svc-59qjg
    namespace: lre-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-amqp-1-svc
      uid: b5f743db-3645-4b83-bd17-3ba0b5952eca
    resourceVersion: "467404264"
    uid: 1de93de4-d4a1-4a5d-a587-329671569b47
  ports:
  - name: amqp-1
    port: 5672
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.16.94
    conditions:
      ready: true
      serving: true
      terminating: false
    hostname: lre-broker-ss-1
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: lre-broker-ss-1
      namespace: lre-qa
      resourceVersion: "467404262"
      uid: d2bb86b5-229d-432d-b9f0-23e48da3ff61
    zone: brazilsouth-2
  - addresses:
    - 10.128.22.5
    conditions:
      ready: true
      serving: true
      terminating: false
    hostname: lre-broker-ss-0
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: lre-broker-ss-0
      namespace: lre-qa
      resourceVersion: "476624630"
      uid: a29ea7f8-d45c-4324-8558-33ef69962cb2
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-26T02:42:54Z"
    generateName: lre-broker-hdls-svc-
    generation: 80
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-hdls-svc
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-hdls-svc-dmv47
    namespace: lre-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-hdls-svc
      uid: 1fcdf4fa-1610-424a-b494-81651ab294d4
    resourceVersion: "476624633"
    uid: 14c74625-0dfb-44d5-800b-22193e25c990
  ports:
  - name: all
    port: 61616
    protocol: TCP
  - name: console-jolokia
    port: 8161
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.16.94
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: lre-broker-ss-1
      namespace: lre-qa
      resourceVersion: "467404262"
      uid: d2bb86b5-229d-432d-b9f0-23e48da3ff61
    zone: brazilsouth-2
  - addresses:
    - 10.128.22.5
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: lre-broker-ss-0
      namespace: lre-qa
      resourceVersion: "476624630"
      uid: a29ea7f8-d45c-4324-8558-33ef69962cb2
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-26T02:42:54Z"
    generateName: lre-broker-ping-svc-
    generation: 80
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-ping-svc
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-ping-svc-zsdq6
    namespace: lre-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-ping-svc
      uid: 03bbea80-bbdd-4a6e-b259-2e8ade997092
    resourceVersion: "476624632"
    uid: f2542206-c606-45f0-afee-df42b9c10e37
  ports:
  - name: ""
    port: 8888
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.22.5
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth2-4dm6s
    targetRef:
      kind: Pod
      name: lre-broker-ss-0
      namespace: lre-qa
      resourceVersion: "476624630"
      uid: a29ea7f8-d45c-4324-8558-33ef69962cb2
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-26T02:42:54Z"
    generateName: lre-broker-wconsj-0-svc-
    generation: 32
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-wconsj-0-svc
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-wconsj-0-svc-wzpln
    namespace: lre-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-wconsj-0-svc
      uid: a366edf1-5d1a-40fb-8519-b4fac14f3f59
    resourceVersion: "476624631"
    uid: 7b169656-f6f7-48fc-a032-a17e570fc6c2
  ports:
  - name: wconsj-0
    port: 8161
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.16.94
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: lre-broker-ss-1
      namespace: lre-qa
      resourceVersion: "467404262"
      uid: d2bb86b5-229d-432d-b9f0-23e48da3ff61
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-26T02:42:55Z"
    generateName: lre-broker-wconsj-1-svc-
    generation: 49
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-wconsj-1-svc
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-wconsj-1-svc-r78ln
    namespace: lre-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-wconsj-1-svc
      uid: f7bd5fab-29f3-4fcd-a095-5ea0649e9e28
    resourceVersion: "467404267"
    uid: b58b495c-1f01-481e-bf24-dc1d549bba3b
  ports:
  - name: wconsj-1
    port: 8161
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.17.123
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: product-lre-3-tpqg8
      namespace: lre-qa
      resourceVersion: "467404210"
      uid: 336c5830-2c84-4423-ab58-4f0fcb6e23dd
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-26T02:42:55Z"
    generateName: product-lre-
    generation: 58
    labels:
      app: product-lre
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: product-lre
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: product-lre-jrd49
    namespace: lre-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: product-lre
      uid: 2c671447-de85-4a19-8c38-6062471d2c21
    resourceVersion: "467404214"
    uid: 0c1f7cf8-7312-4d57-9323-5cada31e907e
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
