lre-qa/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-26T02:42:54Z"
    labels:
      app: front-lre
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: front-lre
    namespace: lre-qa
    resourceVersion: "11895850"
    uid: c51418cc-a2a0-4ac2-89c1-e5d4633c7816
  spec:
    host: front-lre-lre-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 3000-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: front-lre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-26T02:42:54Z"
        status: "True"
        type: Admitted
      host: front-lre-lre-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-26T02:42:54Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      statefulset.kubernetes.io/pod-name: lre-broker-ss-0
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-amqp-0-svc-rte
    namespace: lre-qa
    resourceVersion: "11895852"
    uid: 55e21a49-5477-44b2-a453-949bf02f8fa6
  spec:
    host: lre-broker-amqp-0-svc-rte-lre-qa.api-cloud.dirtrab.cl
    port:
      targetPort: amqp-0
    tls:
      insecureEdgeTerminationPolicy: None
      termination: passthrough
    to:
      kind: Service
      name: lre-broker-amqp-0-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-26T02:42:54Z"
        status: "True"
        type: Admitted
      host: lre-broker-amqp-0-svc-rte-lre-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-26T02:42:54Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      statefulset.kubernetes.io/pod-name: lre-broker-ss-1
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-amqp-1-svc-rte
    namespace: lre-qa
    resourceVersion: "11895855"
    uid: d87cefd2-6ee0-490e-9d2d-9f911000323e
  spec:
    host: lre-broker-amqp-1-svc-rte-lre-qa.api-cloud.dirtrab.cl
    port:
      targetPort: amqp-1
    tls:
      insecureEdgeTerminationPolicy: None
      termination: passthrough
    to:
      kind: Service
      name: lre-broker-amqp-1-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-26T02:42:54Z"
        status: "True"
        type: Admitted
      host: lre-broker-amqp-1-svc-rte-lre-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-26T02:42:54Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      statefulset.kubernetes.io/pod-name: lre-broker-ss-0
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-wconsj-0-svc-rte
    namespace: lre-qa
    resourceVersion: "11895861"
    uid: 141158f1-09ff-46d4-a681-eeba3700d0c2
  spec:
    host: lre-broker-wconsj-0-svc-rte-lre-qa.api-cloud.dirtrab.cl
    port:
      targetPort: wconsj-0
    tls:
      insecureEdgeTerminationPolicy: None
      termination: passthrough
    to:
      kind: Service
      name: lre-broker-wconsj-0-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-26T02:42:54Z"
        status: "True"
        type: Admitted
      host: lre-broker-wconsj-0-svc-rte-lre-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-26T02:42:54Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      statefulset.kubernetes.io/pod-name: lre-broker-ss-1
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: lre-broker-wconsj-1-svc-rte
    namespace: lre-qa
    resourceVersion: "11895864"
    uid: 54237605-14a6-4111-a7cb-d24d720efa3a
  spec:
    host: lre-broker-wconsj-1-svc-rte-lre-qa.api-cloud.dirtrab.cl
    port:
      targetPort: wconsj-1
    tls:
      insecureEdgeTerminationPolicy: None
      termination: passthrough
    to:
      kind: Service
      name: lre-broker-wconsj-1-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-26T02:42:54Z"
        status: "True"
        type: Admitted
      host: lre-broker-wconsj-1-svc-rte-lre-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-26T02:42:54Z"
    labels:
      app: product-lre
      migration.openshift.io/migrated-by-migmigration: e38d34ca-b64b-4f51-8661-6ba7d05484a6
      migration.openshift.io/migrated-by-migplan: ec0923fa-4d06-4a8b-a67a-a32b23d75ede
      velero.io/backup-name: migration-fc7c1-initial-wskdq
      velero.io/restore-name: migration-fc7c1-final-6g8n2
    name: product-lre
    namespace: lre-qa
    resourceVersion: "271761184"
    uid: 22c33dc4-8613-4c02-b686-1562f956e80c
  spec:
    host: product-lre-lre-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 3000-tcp
    tls:
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: product-lre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-26T02:42:54Z"
        status: "True"
        type: Admitted
      host: product-lre-lre-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
